--- a/src/main/webapp/webback/login.html
+++ b/src/main/webapp/webback/login.html
@@ -59,7 +59,7 @@ $(".submit_btn").click(function(){
 		data:$('#fm').serialize(),
 		success:function (data) {
 			if(data){
-			   window.location.href='../dl.html';
+			   window.location.href='../webback/dl.html';
             }else{
 			    alert("错误！");
 			}
