--- a/src/main/webapp/webback/updateweb.html
+++ b/src/main/webapp/webback/updateweb.html
@@ -55,7 +55,7 @@
                 success: function (data) {
                     if (data == true) {
                         alert("修改成功！")
-                        parent.location.href = 'webback/login.html';
+                        parent.location.href = 'login.html';
                     }
                 }
             });
